✨ Answer and View Responses

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "surveyor",
    "version": "1.0.0",
-   "license": "MIT License",
+   "license": "mit",
    "scripts": {
       "dev": "run-p routify rollup",
       "dev:nollup": "run-p routify nollup",
